@@ -110,62 +110,66 @@ CA_LIB_NAMESPACE_BEGIN
 
 typedef int (*format_output_func)(const char *fmt, ...);
 
-namespace debug
+class debug : no_instance
 {
+public:
+	/*
+	 * It's easy to understand that cpp-assistant library may output debug, warning or error info
+	 * when exceptions occur or for some other purposes.
+	 *
+	 * APIs below can be used to do such settings as:
+	 *     enabling or disabling the output prefix displaying,
+	 *     enabling or disabling the output,
+	 *     setting the output destinations (e.g. to stdout, stderr or to files)
+	 * and so on. See comments of each API for more details.
+	 */
 
-/*
- * It's easy to understand that cpp-assistant library may output debug, warning or error info
- * when exceptions occur or for some other purposes.
- *
- * APIs below can be used to do such settings as:
- *     enabling or disabling the output prefix displaying,
- *     enabling or disabling the output,
- *     setting the output destinations (e.g. to stdout, stderr or to files)
- * and so on. See comments of each API for more details.
- */
+	// Makes the debug or warning/error output display with prefix, like:
+	// [2018-01-01 00:00:00.000000][PID:1234] I'm the output with prefix...
+	// or something else.
+	static void enable_output_prefix(void);
 
-extern bool g_debug_enabled; // can not be set or unset directly
+	// Makes the debug or warning/error output display without prefix.
+	static void disable_output_prefix(void);
 
-// Makes the debug or warning/error output display with prefix, like:
-// [2018-01-01 00:00:00.000000][PID:1234] I'm the output with prefix...
-// or something else.
-void enable_output_prefix(void);
+	/*
+	 * xx_is_enabled(): Checks whether the specified output is enabled.
+	 *
+	 * redirect_xx_output(): Redirects the specified output to stdout, stderr or a file.
+	 *      If @where is NULL, then the specified output will be disabled.
+	 *
+	 * get_xx_output_holder(): Gets the output file pointer.
+	 *
+	 * set_xx_lock(): Sets a lock for the specified output, only required in multi-threading environment.
+	 *
+	 */
 
-// Makes the debug or warning/error output display without prefix.
-void disable_output_prefix(void);
+	static inline bool debug_report_is_enabled(void)
+	{
+		return m_debug_enabled;
+	}
 
-/*
- * xx_is_enabled(): Checks whether the specified output is enabled.
- *
- * redirect_xx_output(): Redirects the specified output to stdout, stderr or a file.
- *      If @where is NULL, then the specified output will be disabled.
- *
- * get_xx_output_holder(): Gets the output file pointer.
- *
- * set_xx_lock(): Sets a lock for the specified output, only required in multi-threading environment.
- *
- */
+	static void redirect_debug_output(const FILE *where);
 
-inline bool debug_is_enabled(void)
-{
-    return g_debug_enabled;
-}
+	static const FILE* get_debug_output_holder(void);
 
-void redirect_debug_output(const FILE *where);
+	static void set_debug_lock(const mutex *lock);
 
-const FILE* get_debug_output_holder(void);
+	static bool error_report_is_enabled(void);
 
-void set_debug_lock(const mutex *lock);
+	static void redirect_error_output(const FILE *where);
 
-bool error_report_is_enabled(void);
+	static const FILE* get_error_output_holder(void);
 
-void redirect_error_output(const FILE *where);
+	static void set_error_lock(const mutex *lock);
 
-const FILE* get_error_output_holder(void);
+private:
+	static bool m_debug_enabled;
 
-void set_error_lock(const mutex *lock);
+	friend bool __debug_is_enabled(void);
+	friend void __set_debug_output(const FILE *);
 
-} // namespace debug
+}; // class debug
 
 CA_LIB_NAMESPACE_END
 
