@@ -61,7 +61,8 @@ private:
 /* ===================================
  * destructor:
  * =================================== */
-public:
+private:
+    ~daemon();
 
 /* ===================================
  * types:
