@@ -94,7 +94,8 @@ private:
 /* ===================================
  * destructor:
  * =================================== */
-public:
+private:
+    ~signal_capturer();
 
 /* ===================================
  * types:
