@@ -1,3 +1,7 @@
+wxc, 2018/07/08, v0.0.13:
+	1、libcpp_assistant加入对部分C++11特性的支持，以及namespace内的接口改成
+		类静态成员函数
+
 wxc, 2018/04/30, v0.0.12:
 	1、tcp_app框架改进未完整数据包的处理逻辑，采用若干特殊码进行标识
 	2、定时任务和网络请求处理操作加入耗时统计
